// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.google.finapp;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.google.finapp";
option java_outer_classname = "ServiceProto";

service FinApp {

  rpc Ping(Empty) returns (PingResponse) {}

  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}

  rpc CreateCustomerRole(CreateCustomerRoleRequest) returns (CreateCustomerRoleResponse) {}

  rpc MoveAccountBalance(MoveAccountBalanceRequest) returns (MoveAccountBalanceResponse) {}

  rpc CreateTransactionForAccount(CreateTransactionForAccountRequest) returns (CreateTransactionForAccountResponse) {}

  rpc GetRecentTransactionsForAccount(GetRecentTransactionsForAccountRequest) returns (GetRecentTransactionsForAccountResponse) {}
}

message Empty {}

message PingResponse {
  string pong = 1;
}

message CreateCustomerRequest {
  string name = 1;
  string address = 2;
}

message CreateCustomerResponse {
  bytes customer_id = 1;
}

message CreateAccountRequest {
  string balance = 1; // Digits[.[Digits]] or [Digits].Digits

  enum Status {
    UNSPECIFIED_ACCOUNT_STATUS = 0;
    ACTIVE = 1;
    FROZEN = 2;
  }
  Status status = 2;
}

message CreateAccountResponse {
  bytes account_id = 1;
}

message CreateCustomerRoleRequest {
  bytes customer_id = 1;
  bytes account_id = 2;
  string name = 3;
}

message CreateCustomerRoleResponse {
  bytes role_id = 1;
}

message MoveAccountBalanceRequest {
  bytes from_account_id = 1;
  bytes to_account_id = 2;
  string amount = 3; // Digits[.[Digits]] or [Digits].Digits
}

message MoveAccountBalanceResponse {
  string from_account_id_balance = 1; // Digits[.[Digits]] or [Digits].Digits
  string to_account_id_balance = 2; // Digits[.[Digits]] or [Digits].Digits
}

message CreateTransactionForAccountRequest {
  bytes account_id = 1;
  string amount = 2; // Digits[.[Digits]] or [Digits].Digits
  bool is_credit = 3;
}

message CreateTransactionForAccountResponse {
  string new_balance = 1; // Digits[.[Digits]] or [Digits].Digits
}

message TransactionEntry {
  bytes account_id = 1;
  .google.protobuf.Timestamp event_timestamp = 2;
  bool is_credit = 3;
  string amount = 4;
}

message GetRecentTransactionsForAccountRequest {
  bytes account_id = 1;
  // Only return transactions within [begin_timestamp, end_timestamp).
  // If begin_timestamp is not set, do not set a lower bound restriction.
  .google.protobuf.Timestamp begin_timestamp = 2;
  // If end_timestamp is not set, do not set a upper bound restriction.
  .google.protobuf.Timestamp end_timestamp = 3;
  // If > 0, the maximum number of entries to return, else return all entries.
  int32 max_entry_count = 4;
}

message GetRecentTransactionsForAccountResponse {
  repeated TransactionEntry transaction_entry = 1;
}
